--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,17 +11,21 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
-    "framer-motion": "^12.5.0",
+    "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
+    "framer-motion": "^12.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.0.12",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
